# api.yml
@@ -44,7 +44,33 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
-
+  /login:
+    post:
+      summary: Endpoint to login
+      operationId: login
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - name: body
+          in: body
+          required: true
+          schema:
+            $ref: "#/components/schemas/LoginInput"
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:    
+              schema:
+                $ref: "#/components/schemas/LoginResponse"
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
   /hello:
     get:
       summary: This is just a test endpoint to get you started. Please delete this endpoint.
@@ -73,12 +99,21 @@ components:
     Users:
       type: object
       properties:
-        phoneNumbers:
+        phoneNumber:
           type: string
           example: 08123342446
         fullName:
           type: string
           example: Fazar
+        passwords:
+          type: string
+          example: password
+    LoginInput:
+      type: object
+      properties:
+        phoneNumber:
+          type: string
+          example: 08123342446
         passwords:
           type: string
           example: password
@@ -90,6 +125,17 @@ components:
         id:
           type: integer
           format: int64
+    LoginResponse:
+      type: object
+      required:
+        - id
+        - accessToken
+      properties:
+        id:
+          type: integer
+          format: int64
+        accessToken:
+          type: string
     Response:
       type: object
       required:
